# ScheduleSQL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  create.sh  create_directory.sh  delete.sh  delete_directory.sh  modify_directory.sh  modify_file_add_content.sh  modify_file_delete_content.sh  schedulesql  travisbuild.sh
database/: nume.json
root/: ScheduleSQL.json
src/uso/: json.h  main.c  main.h
src/uso/instructions/: create.c  create.h  delete.c  delete.h  modify.c  modify.h
src/uso/instructions/add/: addData.c  addData.h  addEntry.c  addEntry.h
src/uso/instructions/delete/: deleteDataArgument.c  deleteDataArgument.h  deleteDataSimple.c  deleteDataSimple.h  deleteEntry.c  deleteEntry.h
src/uso/instructions/modify/: modifyDataArgument.c  modifyDataArgument.h  modifyDataSimple.c  modifyDataSimple.h
